Navbar spacing fixes

--- a/styles/SimStyle.css
+++ b/styles/SimStyle.css
@@ -307,7 +307,7 @@ ul.project-link-list li a:active {
 	}
 
 	.about-body-container{
-		padding-top: 180px;
+		padding-top: 360px;
 		padding-left: 10%;
 		padding-right: 10%;
 		padding-bottom: 5%;
